devop: 🔧 Create / Restore screens done

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -21,6 +21,7 @@
 @tipBg: #FFF7B2;
 @overlayBg: rgba(0, 0, 0, 0.3);
 @introHeaderBg: #F9FAFB;
+@tip: #FFF7B2;
 
 @shadowColor: rgba(0, 0, 0, 0.1);
 
