devop: 🔧 fix network gradient changes

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -25,15 +25,11 @@
 
 @shadowColor: rgba(0, 0, 0, 0.1);
 
-@polkadot: #E6007A;
-@moonbeam: #53CBC9;
-@polygon: #8247E5;
 @default: #C4C4C4;
 
-@defaultGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), #C4C4C4;
-@ethereumGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), #05C0A5;
-@polygonGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), #8247E5;
-@polkadotGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), #E6007A;
-@moonbeamGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), #53CBC9;
+@networkGradientColor: #b81111;
+
+
+@defaultGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), @networkGradientColor;
 
 @orange: #FF6D00;
