devop: 🔧 Send Transaction develop

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -1,4 +1,5 @@
 @primary: #05C0A5;
+@primary01: rgba(5, 192, 165, 0.1);
 
 @primaryLabel: #202124;
 @secondaryLabel: #5F6368;
@@ -10,6 +11,7 @@
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
 @error: #D50000;
+@error01: rgba(213, 0, 0, 0.1);
 @elevation: rgba(0, 0, 0, 0.87);
 
 @darkBg: #DADCE0;
