--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -7,6 +7,7 @@
 @black: #000000;
 @black07: rgba(0, 0, 0, 0.7);
 @black007: rgba(0, 0, 0, 0.07);
+@black004: rgba(0, 0, 0, 0.04);
 @white: #FFFFFF;
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
