feat: ✨ add Swap views

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -10,6 +10,7 @@
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
 @error: #D50000;
+@error01: rgba(213, 0, 0, 0.1);
 @elevation: rgba(0, 0, 0, 0.87);
 
 @darkBg: #DADCE0;
@@ -29,7 +30,7 @@
 
 @networkGradientColor: #b81111;
 
-
 @defaultGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), @networkGradientColor;
 
 @orange: #FF6D00;
+@orange01: rgba(255, 109, 0, 0.1);
