devop: 🔧 update common popup

--- a/packages/extension/src/ui/action/styles/custom-scroll.less
+++ b/packages/extension/src/ui/action/styles/custom-scroll.less
@@ -32,7 +32,7 @@
     position: absolute;
     width: 4px;
     right: 8px;
-    top: 8;
+    top: 8px;
     bottom: 0;
     background: rgba(0, 0, 0, 0.08);
     border-radius: 3px;
@@ -45,17 +45,11 @@
     padding-right: 20px;
     box-sizing: border-box;
   }
-
-  /*.ps--active-x > .ps__rail-x,
-  .ps--active-y > .ps__rail-y {
-    display: block;
-  }*/
   
   /*
    * Scrollbar thumb styles
    */
   .ps__thumb-x {
-    background-color: #aaa;
     border-radius: 6px;
     transition: background-color .2s linear, height .2s ease-in-out;
     -webkit-transition: background-color .2s linear, height .2s ease-in-out;
@@ -74,6 +68,7 @@
     background: rgba(0, 0, 0, 0.36);
     border-radius: 3px;
     position: absolute;
+    background: rgba(0, 0, 0, 0.36);
   }
   
   /* MS supports */
