--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -2,10 +2,51 @@
 
 .common-popup {
     width: 100%;
+    height: 100%;
 
-    &__logo {
-        margin-bottom: 8px;
+    &__header {
+        padding: 28px 0 8px 0;
     }
+
+    &__content {
+        height: calc(~"100% - 52px");
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    &__wrap {
+        width: 100%;
+    }
+
+    &__network {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+        position: absolute;
+        right: 56px;
+        top: 28px;
+    
+        img {
+          width: 16px;
+          height: 16px;
+          margin-right: 8px;
+        }
+    
+        p {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 12px;
+          line-height: 16px;
+          text-align: right;
+          letter-spacing: 0.5px;
+          color: @primaryLabel;
+          margin: 0;
+        }
+      }
 
     h2 {
         font-style: normal;
@@ -122,13 +163,48 @@
         flex-direction: row;
         width: 100%;
         box-sizing: border-box;
-
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        font-size: 0;
+        padding: 24px;
+        box-sizing: border-box;
+        background-color: @white;
         &-cancel {
-            width: 108px;
+          width: 172px;
         }
-
         &-send {
-            width: 232px;
+          width: 232px;
         }
+    
+        &.border {
+          box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05),
+            0px 0px 1px rgba(0, 0, 0, 0.25);
+        }
+    }
+
+    &__scroll-area {
+        position: relative;
+        margin: auto;
+        width: calc(~"100% + 53px");
+        height: calc(~"100% - 88px");
+        margin: 0;
+        padding: 0 53px 0 0 !important;
+        margin-right: -53px;
+        box-sizing: border-box;
+    
+        &.ps--active-y {
+          padding-bottom: 0 !important;
+        }
+    
+        & > .ps__rail-y {
+          right: 0 !important;
+        }
+      }
+}
+
+.ps--active-y {
+    .common-popup__content {
+        height: auto;
     }
 }
