devop: 🔧 create Connect to DApp scenario

--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -66,6 +66,14 @@
         padding: 10px 16px;
         width: 100%;
         margin: 0 0 16px 0;
+
+        &.no-inset {
+            margin: 0;
+        }
+
+        &.no-padding {
+            padding: 0;
+        }
     }
 
     &__message {
