fix: bug fixes and updates

--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -87,6 +87,7 @@
         height: auto;
         max-height: 180px;
         overflow: auto;
+        word-break: break-all;
     }
 
     &__account {
