fix: bug fix 0.5.5

--- a/packages/extension/src/providers/ethereum/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/verify-transaction.less
@@ -221,6 +221,7 @@
       &-text {
         padding-top: 12px;
         text-align: left;
+        word-break: break-all;
   
         p {
           font-style: normal;
