--- a/packages/extension/src/providers/polkadot/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/polkadot/ui/styles/verify-transaction.less
@@ -49,7 +49,7 @@
       border-radius: 12px;
       padding: 10px 16px;
       width: 100%;
-      margin: 0 0 16px 0;
+      margin: 0 0 12px 0;
     }
     &__amount {
       display: flex;
@@ -95,6 +95,11 @@
       justify-content: flex-start;
       align-items: center;
       flex-direction: row;
+
+      &.from {
+        margin-bottom: 12px;
+      }
+
       img {
         width: 32px;
         height: 32px;
@@ -109,6 +114,16 @@
           line-height: 20px;
           letter-spacing: 0.25px;
           color: @primaryLabel;
+          margin: 0;
+        }
+
+        h6 {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 16px;          
+          letter-spacing: 0.5px;
+          color: @secondaryLabel;
           margin: 0;
         }
   
@@ -145,6 +160,16 @@
             }
           }
         }
+
+        &-to {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+          letter-spacing: 0.25px;
+          color: @primaryLabel;
+          word-break: break-all;
+}
       }
     }
     &__error {
@@ -264,12 +289,20 @@
       &-text {
         padding-top: 12px;
         text-align: left;
+        font-family: 'SF Mono', 'Segoe UI Mono', 'Menlo', 'Consolas';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;          
+        letter-spacing: 0.5px;
+        color: @secondaryLabel;
   
         p {
+          font-family: 'SF Mono', 'Segoe UI Mono', 'Menlo', 'Consolas';
           font-style: normal;
           font-weight: 400;
           font-size: 12px;
-          line-height: 16px;
+          line-height: 16px;          
           letter-spacing: 0.5px;
           color: @secondaryLabel;
           margin: 0;
@@ -277,6 +310,10 @@
           a {
             color: @secondaryLabel;
           }
+        }
+
+        li {
+          list-style: none;
         }
       }
     }
@@ -323,6 +360,102 @@
   
       & > .ps__rail-y {
         right: 0 !important;
+      }
+    }
+
+    &__hw {
+      padding: 2px 0 2px 44px;
+      position: relative;
+
+      svg {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        margin-top: -16px;
+      }
+
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.25px;
+        color: @secondaryLabel;
+        margin: 0;
+      }
+    }
+
+    &__fee {
+      height: 40px;
+      background: @lightBg;
+      margin: 0 0 12px 0;
+      box-sizing: border-box;
+      border: 1px solid @gray01;
+      box-sizing: border-box;
+      border-radius: 10px;
+      width: 100%;
+      padding: 16px 10px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: row;
+      position: relative;
+      cursor: pointer;
+      text-decoration: none;
+    
+      &-value {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+    
+        &-fiat {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+          letter-spacing: 0.25px;
+          color: @secondaryLabel;
+          margin: 0 8px 0 0;
+        }
+    
+        &-crypto {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+          letter-spacing: 0.25px;
+          color: @tertiaryLabel;
+          margin: 0;
+    
+          span {
+            font-variant: small-caps;
+          }
+        }
+      }
+    }
+
+    &__error {
+      margin: 0 0 8px 0;
+      background: @error01;
+      border-radius: 10px;
+      padding: 12px 16px 12px 57px;
+      position: relative;
+      box-sizing: border-box;
+
+      svg {
+        position: absolute;
+        left: 16px;
+        top: 50%;
+        margin-top: -12px;
+      }
+      p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.25px;
+        color: @error;
+        margin: 0;
       }
     }
   }
