--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -1,4 +1,4 @@
-@primary: #05C0A5;
+@primary: #684CFF;
 @primary01: rgba(5, 192, 165, 0.1);
 
 @primaryLabel: #202124;
@@ -12,9 +12,10 @@
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
-@error: #D50000;
-@error01: rgba(213, 0, 0, 0.1);
+@error: #F4432C;
+@error01: rgba(244, 67, 44, 0.05);;
 @elevation: rgba(0, 0, 0, 0.87);
+@success: #34C759;
 
 @darkBg: #DADCE0;
 @primaryBg: #FFFFFF;
@@ -31,7 +32,7 @@
 
 @default: #C4C4C4;
 
-@networkGradientColor: #b81111;
+@networkGradientColor: linear-gradient(180deg, #C549FF 0%, #684CFF 100%);
 
 @defaultGradient: radial-gradient(100% 50% at 100% 50%, rgba(250, 250, 250, 0.92) 0%, rgba(250, 250, 250, 0.98) 100%), @networkGradientColor;
 
