fix: fix connecting popups

--- a/packages/extension/src/providers/ethereum/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/verify-transaction.less
@@ -41,6 +41,7 @@
     letter-spacing: 0.25px;
     color: @primaryLabel;
     margin: 0 0 16px 0;
+    word-break: break-all;
   }
   &__block {
     background: @lightBg;
@@ -73,6 +74,7 @@
         line-height: 32px;
         color: @primaryLabel;
         margin: 0;
+        word-break: break-all;
 
         span {
           font-variant: small-caps;
@@ -115,6 +117,7 @@
         letter-spacing: 0.25px;
         color: @primaryLabel;
         margin: 0;
+        word-break: break-all;
       }
 
       h6 {
@@ -125,6 +128,7 @@
         letter-spacing: 0.5px;
         color: @secondaryLabel;
         margin: 0;
+        word-break: break-all;
       }
 
       div {
@@ -219,6 +223,7 @@
         letter-spacing: 0.25px;
         color: @primaryLabel;
         margin: 0;
+        word-break: break-all;
       }
 
       p {
@@ -229,6 +234,7 @@
         letter-spacing: 0.5px;
         color: @tertiaryLabel;
         margin: 0;
+        word-break: break-all;
         word-break: break-all;
       }
     }
@@ -251,6 +257,7 @@
       line-height: 16px;
       letter-spacing: 0.8px;
       color: @primaryLabel;
+      word-break: break-all;
 
       &:hover {
         background: rgba(0, 0, 0, 0.04);
@@ -296,6 +303,7 @@
       line-height: 16px;          
       letter-spacing: 0.5px;
       color: @secondaryLabel;
+      word-break: break-all;
 
       p {
         font-family: 'SF Mono', 'Segoe UI Mono', 'Menlo', 'Consolas';
@@ -306,6 +314,7 @@
         letter-spacing: 0.5px;
         color: @secondaryLabel;
         margin: 0;
+        word-break: break-all;
 
         a {
           color: @secondaryLabel;
