--- a/packages/extension/src/providers/polkadot/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/polkadot/ui/styles/verify-transaction.less
@@ -41,6 +41,7 @@
       letter-spacing: 0.25px;
       color: @primaryLabel;
       margin: 0 0 16px 0;
+      word-break: break-all;
     }
     &__block {
       background: @lightBg;
@@ -73,6 +74,7 @@
           line-height: 32px;
           color: @primaryLabel;
           margin: 0;
+          word-break: break-all;
   
           span {
             font-variant: small-caps;
@@ -87,6 +89,7 @@
           letter-spacing: 0.25px;
           color: @secondaryLabel;
           margin: 0;
+          word-break: break-all;
         }
       }
     }
@@ -115,6 +118,7 @@
           letter-spacing: 0.25px;
           color: @primaryLabel;
           margin: 0;
+          word-break: break-all;
         }
 
         h6 {
@@ -125,6 +129,7 @@
           letter-spacing: 0.5px;
           color: @secondaryLabel;
           margin: 0;
+          word-break: break-all;
         }
   
         div {
@@ -219,6 +224,7 @@
           letter-spacing: 0.25px;
           color: @primaryLabel;
           margin: 0;
+          word-break: break-all;
         }
   
         p {
@@ -306,6 +312,7 @@
           letter-spacing: 0.5px;
           color: @secondaryLabel;
           margin: 0;
+          word-break: break-all;
   
           a {
             color: @secondaryLabel;
