--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -56,6 +56,7 @@
         letter-spacing: 0.25px;
         color: @primaryLabel;
         margin: 0 0 16px 0;
+        word-break: break-all;
     }
 
     &__block {
@@ -112,6 +113,7 @@
                 letter-spacing: 0.25px;
                 color: @primaryLabel;
                 margin: 0;
+                word-break: break-all;
             }
 
             p {
