fix: bug fixes and updates

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -13,7 +13,7 @@
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
 @error: #F4432C;
-@error01: rgba(244, 67, 44, 0.05);;
+@error01: rgba(244, 67, 44, 0.05);
 @elevation: rgba(0, 0, 0, 0.87);
 @success: #34C759;
 
@@ -27,6 +27,7 @@
 @overlayBg: rgba(0, 0, 0, 0.3);
 @introHeaderBg: #F9FAFB;
 @tip: #FFF7B2;
+@actionBg: #F9F9FB;
 
 @shadowColor: rgba(0, 0, 0, 0.1);
 
