--- a/macos/Enkrypt/Enkrypt/Resources/Style.css
+++ b/macos/Enkrypt/Enkrypt/Resources/Style.css
@@ -6,7 +6,6 @@
 
 :root {
     color-scheme: light dark;
-
     --spacing: 20px;
 }
 
@@ -19,11 +18,9 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
-    gap: var(--spacing);
-    margin: 0 calc(var(--spacing) * 2);
-    height: 100%;
-
+    width: 720px;
+    margin: 0;
+    height: 500px;
     font: -apple-system-short-body;
     text-align: center;
 }
@@ -40,6 +37,91 @@ body.state-off :is(.state-on, .state-unknown) {
     display: none;
 }
 
+.logo {
+  margin: 0 0 16px 0;
+}
+
+h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 32px;
+  text-align: center;
+  margin: 0 0 32px 0;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.block {
+  width: 540px;
+  background: #F5F5F5;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  padding: 16px 20px;
+  box-sizing: border-box;
+  margin: 0 0 32px 0;
+  overflow: hidden;
+  text-align: left;
+}
+
+h4 {
+  font-style: normal;
+  font-weight: 590;
+  font-size: 11px;
+  line-height: 14px;
+  margin: 0 0 4px 0;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: #202124;
+  margin: 0;
+}
+
+.image {
+  margin: 0 0 -20px -20px;
+  display: block;
+}
+
+.image-dark {
+  margin: 0 0 -20px -20px;
+  display: none;
+}
+
 button {
-    font-size: 1em;
+  background: #0A84FF;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 28px;
+  color: #FFFFFF;
+  padding: 0 12px;
+  border: 0 none;
+}
+
+@media (prefers-color-scheme: dark) {
+  h1 {
+    color: rgba(255, 255, 255, 0.85);
+  }
+  .block {
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+  }
+  h4 {
+    color: rgba(255, 255, 255, 0.55);
+  }
+  p {
+    color: rgba(255, 255, 255, 0.85);
+  }
+  .image {
+    display: none;
+  }
+  .image-dark {
+    display: block;
+  }
 }
