--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -9,7 +9,7 @@
     }
 
     &__content {
-        height: calc(~"100% - 55px");
+        min-height: calc(~"100% - 55px");
         box-sizing: border-box;
         display: flex;
         flex-direction: row;
