fixes are ready for the qa

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -15,7 +15,7 @@
 @error: #F4432C;
 @error01: rgba(244, 67, 44, 0.05);
 @elevation: rgba(0, 0, 0, 0.87);
-@success: #34C759;
+@success: #05C0A5;
 
 @darkBg: #DADCE0;
 @primaryBg: #FFFFFF;
