--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -3,6 +3,7 @@
 .common-popup {
     width: 100%;
     height: 100%;
+    padding-left: 30px;
 
     &__header {
         padding: 28px 0 8px 0;
@@ -10,6 +11,7 @@
 
     &__content {
         min-height: calc(~"100% - 55px");
+        max-width: calc(~"100% - 55px");
         box-sizing: border-box;
         display: flex;
         flex-direction: row;
