devop: add json tree view for sign typed data

--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -90,6 +90,7 @@
         height: auto;
         max-height: 180px;
         overflow: auto;
+        scrollbar-width: thin;
         word-break: break-all;
     }
 
