devop: btc msg signing

--- a/packages/extension/src/providers/bitcoin/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/bitcoin/ui/styles/verify-transaction.less
@@ -198,6 +198,24 @@
       }
     }
   }
+    &__message {
+      background: @lightBg;
+      border: 1px solid @gray01;
+      box-sizing: border-box;
+      border-radius: 12px;
+      padding: 10px 16px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      letter-spacing: 0.25px;
+      color: @primaryLabel;
+      margin: 0 0 6px 0;
+      height: auto;
+      max-height: 180px;
+      overflow: auto;
+      word-break: break-all;
+    }
   &__info {
     display: flex;
     justify-content: flex-start;
