--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -12,6 +12,7 @@
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
+@white09: rgba(255, 255, 255, 0.9);
 @error: #f4432c;
 @error01: rgba(244, 67, 44, 0.05);
 @elevation: rgba(0, 0, 0, 0.87);
