--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -1,5 +1,6 @@
 @primary: #684cff;
 @primary01: rgba(5, 192, 165, 0.1);
+@primaryLight: rgba(104, 76, 255, 0.1);
 
 @primaryLabel: #202124;
 @secondaryLabel: #5f6368;
