--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -6,6 +6,7 @@
 @secondaryLabel: #5f6368;
 @tertiaryLabel: rgba(0, 0, 0, 0.38);
 @black: #000000;
+@black06: rgba(0, 0, 0, 0.6);
 @black07: rgba(0, 0, 0, 0.7);
 @black007: rgba(0, 0, 0, 0.07);
 @black004: rgba(0, 0, 0, 0.04);
