--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -5,10 +5,12 @@
 @secondaryLabel: #5f6368;
 @tertiaryLabel: rgba(0, 0, 0, 0.38);
 @black: #000000;
+@black06: rgba(0, 0, 0, 0.6);
 @black07: rgba(0, 0, 0, 0.7);
 @black007: rgba(0, 0, 0, 0.07);
 @black004: rgba(0, 0, 0, 0.04);
 @white: #ffffff;
+@grayPrimary: rgba(95, 99, 104, 1);
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
 @white07: rgba(255, 255, 255, 0.7);
