fix: title wrap in connect popup

--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -4,6 +4,9 @@
   width: 100%;
   height: 100%;
   padding-left: 30px;
+  h2 {
+    word-break: normal !important;
+  }
 
   &__header {
     padding: 28px 0 8px 0;
