feat: swap network select and token amount ui

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -15,6 +15,7 @@
 @grayPrimary: rgba(95, 99, 104, 1);
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
+@grey08: rgba(0, 0, 0, 0.08);
 @white07: rgba(255, 255, 255, 0.7);
 @white09: rgba(255, 255, 255, 0.9);
 @error: #f4432c;
@@ -28,6 +29,7 @@
 @buttonBg: #f2f4f7;
 @hoverItemBg: #f9fafb;
 @lightBg: #f9fafb;
+@lightSurfaceBg: rgba(249, 250, 251, 1);
 @tipBg: #fff7b2;
 @overlayBg: rgba(0, 0, 0, 0.3);
 @introHeaderBg: #f9fafb;
