feat: list internal addresses

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -16,6 +16,7 @@
 @gray01: rgba(95, 99, 104, 0.1);
 @gray02: rgba(95, 99, 104, 0.2);
 @grey08: rgba(0, 0, 0, 0.08);
+@grey16: rgba(242, 244, 247, 1);
 @white07: rgba(255, 255, 255, 0.7);
 @white09: rgba(255, 255, 255, 0.9);
 @error: #f4432c;
