feat: token select in swap

--- a/packages/extension/src/ui/action/styles/color.less
+++ b/packages/extension/src/ui/action/styles/color.less
@@ -2,6 +2,7 @@
 @primary01: rgba(5, 192, 165, 0.1);
 @primaryLight: rgba(104, 76, 255, 0.1);
 @primary007: rgba(104, 76, 255, 0.07);
+@primaryDarker: rgba(96, 60, 240, 1);
 
 @primaryLabel: #202124;
 @secondaryLabel: #5f6368;
