feat: add label to tx confirmation

--- a/packages/extension/src/providers/common/ui/styles/verify-transaction.less
+++ b/packages/extension/src/providers/common/ui/styles/verify-transaction.less
@@ -7,6 +7,13 @@
   &__logo {
     margin-bottom: 8px;
   }
+  &__label {
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.5px;
+    color: @grayPrimary;
+    margin: 0 0 4px 44px;
+  }
   &__network {
     display: flex;
     justify-content: flex-start;
@@ -167,11 +174,11 @@
 
       &-to {
         font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
-        letter-spacing: 0.25px;
-        color: @primaryLabel;
+        font-weight: 400 !important;
+        font-size: 16px !important;
+        line-height: 20px !important;
+        letter-spacing: 0.5px;
+        color: @black !important;
         word-break: break-all;
       }
     }
