--- a/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
+++ b/packages/extension/src/providers/ethereum/ui/styles/common-popup.less
@@ -20,6 +20,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    padding: 0 20px 10px 20px !important;
   }
 
   &__wrap {
